Fix navigation bar
Upgrade the themes to be generated by the latest mdbook and then reapply
the custom clamav dark and light themes.

I have also:
- Reduced `--content-max-width: 900px` (variables.css)
  This makes it so that the left/right page buttons are less likely to
  overlap important text.
- Reduced the table font-weight, font-size, and padding so that large
  tables are still visible with content-max-width set to 900px.

--- a/theme/css/variables.css
+++ b/theme/css/variables.css
@@ -2,12 +2,15 @@
 /* Globals */
 
 :root {
-    --sidebar-width: 300px;
+    --sidebar-target-width: 300px;
+    --sidebar-width: min(var(--sidebar-target-width), 80vw);
+    --sidebar-resize-indicator-width: 8px;
+    --sidebar-resize-indicator-space: 2px;
     --page-padding: 15px;
-    --content-max-width: 1200px;
+    --content-max-width: 900px;
     --menu-bar-height: 50px;
     --mono-font: "Source Code Pro", Consolas, "Ubuntu Mono", Menlo, "DejaVu Sans Mono", monospace, monospace;
-    --code-font-size: 0.875em /* please adjust the ace font size accordingly in editor.js */
+    --code-font-size: 0.875em; /* please adjust the ace font size accordingly in editor.js */
 }
 
 /* Themes */
@@ -54,6 +57,13 @@
     --search-mark-bg: #ff4646;
 
     --color-scheme: dark;
+
+    /* Same as `--icons` */
+    --copy-button-filter: invert(45%) sepia(6%) saturate(621%) hue-rotate(198deg) brightness(99%) contrast(85%);
+    /* Same as `--sidebar-active` */
+    --copy-button-filter-hover: invert(68%) sepia(55%) saturate(531%) hue-rotate(341deg) brightness(104%) contrast(101%);
+
+    --footnote-highlight: #2668a6;
 }
 
 .clamav_light {
@@ -96,10 +106,16 @@
     --search-mark-bg: #ff4646;
 
     --color-scheme: light;
+    /* Same as `--icons` */
+    --copy-button-filter: invert(51%) sepia(10%) saturate(393%) hue-rotate(198deg) brightness(86%) contrast(87%);
+    /* Same as `--sidebar-active` */
+    --copy-button-filter-hover: invert(77%) sepia(16%) saturate(1798%) hue-rotate(328deg) brightness(98%) contrast(83%);
+
+    --footnote-highlight: #d3a17a;
 }
 
 @media (prefers-color-scheme: dark) {
-    .clamav_light.no-js {
+    html:not(.js) {
         --bg: #222222;
         --fg: #ffffff;
 
@@ -125,6 +141,8 @@
         --quote-bg: #292c2f;
         --quote-border: hsl(226, 15%, 22%);
 
+        --warning-border: #ff8e00;
+
         --table-border-color: #35393d;
         --table-header-bg: hsl(195, 7%, 21%);
         --table-alternate-bg: #292c2f;
@@ -137,5 +155,12 @@
         --searchresults-border-color: #888;
         --searchresults-li-bg: #252932;
         --search-mark-bg: #ff4646;
+
+        --color-scheme: dark;
+
+        /* Same as `--icons` */
+        --copy-button-filter: invert(26%) sepia(8%) saturate(575%) hue-rotate(169deg) brightness(87%) contrast(82%);
+        /* Same as `--sidebar-active` */
+        --copy-button-filter-hover: invert(36%) sepia(70%) saturate(503%) hue-rotate(167deg) brightness(98%) contrast(89%);
     }
 }
